[gd_scene load_steps=33 format=3 uid="uid://bp38lfu2xg7sc"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_c8j4p"]
[ext_resource type="Script" path="res://scripts/player/player_state_machine.gd" id="2_i83vv"]
[ext_resource type="Script" path="res://scripts/player/player_state_default.gd" id="3_16bud"]
[ext_resource type="Script" path="res://scripts/player/player_state_repairing.gd" id="4_edih1"]
[ext_resource type="Script" path="res://scripts/player/player_state_ui.gd" id="5_d4k1u"]
[ext_resource type="Script" path="res://scripts/player/player_state_edge_selection.gd" id="6_mtyls"]
[ext_resource type="Texture2D" uid="uid://dh2utkywjkcrn" path="res://sprites/player/BnWrunningtest.png" id="8_cidqq"]
[ext_resource type="Script" path="res://components/HurtboxComponent.gd" id="8_vuihw"]
[ext_resource type="AudioStream" uid="uid://b2qst461ri4d4" path="res://sounds/combat/oof.wav" id="9_vw7uv"]
[ext_resource type="PackedScene" uid="uid://bnhgqxmsn3vu1" path="res://components/health_component.tscn" id="10_2vmk3"]
[ext_resource type="Script" path="res://scripts/edges/EdgeHandler.gd" id="11_6ds4a"]
[ext_resource type="AudioStream" uid="uid://bm8ntouv5ol6l" path="res://sounds/player/running_wood.wav" id="12_5foum"]
[ext_resource type="AudioStream" uid="uid://cpnffnc4clg7y" path="res://sounds/player/repair.mp3" id="13_5ua86"]
[ext_resource type="PackedScene" uid="uid://uh2tbc2jgtpo" path="res://scenes/buff.tscn" id="14_q74rt"]
[ext_resource type="Script" path="res://scripts/player/charge_attack_bar.gd" id="15_rqql3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ylsmj"]
atlas = ExtResource("8_cidqq")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kuab"]
atlas = ExtResource("8_cidqq")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3ekq"]
atlas = ExtResource("8_cidqq")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1l4id"]
atlas = ExtResource("8_cidqq")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkrtf"]
atlas = ExtResource("8_cidqq")
region = Rect2(384, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n8hq"]
atlas = ExtResource("8_cidqq")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_be6g3"]
atlas = ExtResource("8_cidqq")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdnaw"]
atlas = ExtResource("8_cidqq")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl85k"]
atlas = ExtResource("8_cidqq")
region = Rect2(384, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_r2lml"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylsmj")
}],
"loop": true,
"name": &"repairing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kuab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3ekq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1l4id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkrtf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n8hq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_be6g3")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdnaw")
}],
"loop": true,
"name": &"shooting",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl85k")
}],
"loop": true,
"name": &"standing",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_8uqju"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.118132, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2dujd"]
gradient = SubResource("Gradient_8uqju")
width = 60
height = 150
fill = 1
fill_from = Vector2(0.419, 0.5)
fill_to = Vector2(0.003, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ff0f4"]
size = Vector2(41, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qgewi"]
size = Vector2(8, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lm4s8"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qrhpi"]
bg_color = Color(0.117629, 0.558583, 0.8688, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 10

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m2jei"]
size = Vector2(36, 46)

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 5
z_as_relative = false
collision_layer = 9
collision_mask = 32
script = ExtResource("1_c8j4p")

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("2_i83vv")

[node name="default" type="Node2D" parent="StateMachine"]
process_mode = 4
script = ExtResource("3_16bud")

[node name="repairing" type="Node2D" parent="StateMachine"]
process_mode = 4
script = ExtResource("4_edih1")

[node name="ui_default" type="Node2D" parent="StateMachine"]
process_mode = 4
script = ExtResource("5_d4k1u")

[node name="ui_edge_selection" type="Node2D" parent="StateMachine"]
process_mode = 4
script = ExtResource("6_mtyls")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_r2lml")
animation = &"running"
autoplay = "standing"
frame = 5
frame_progress = 0.877344

[node name="FrontLight" type="PointLight2D" parent="AnimatedSprite2D"]
position = Vector2(1273.33, -7.62939e-06)
scale = Vector2(42.4219, 8.33333)
texture = SubResource("GradientTexture2D_2dujd")

[node name="BodyCollider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2.5, -2)
shape = SubResource("RectangleShape2D_ff0f4")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CarDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CarDetector"]
visible = false
shape = SubResource("RectangleShape2D_qgewi")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -33.0
offset_top = -51.0
offset_right = 33.0
offset_bottom = -46.0
tooltip_text = "Health"
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_lm4s8")
max_value = 50.0
step = 1.0
value = 50.0
show_percentage = false

[node name="ChargeAttackBar" type="ProgressBar" parent="."]
offset_left = -33.0
offset_top = -45.0
offset_right = 33.0
offset_bottom = -40.0
tooltip_text = "Charge Attack"
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_qrhpi")
max_value = 50.0
show_percentage = false
script = ExtResource("15_rqql3")

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component", "hurt_sfx")]
script = ExtResource("8_vuihw")
health_component = NodePath("../HealthComponent")
hurt_sfx = NodePath("Hurt SFX")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
visible = false
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_m2jei")

[node name="Hurt SFX" type="AudioStreamPlayer" parent="HurtboxComponent"]
stream = ExtResource("9_vw7uv")
bus = &"SFX"

[node name="HealthComponent" parent="." node_paths=PackedStringArray("HEALTHBAR") instance=ExtResource("10_2vmk3")]
MAX_HEALTH = 50.0
HEALTHBAR = NodePath("../HealthBar")

[node name="EdgeHandler" type="Node2D" parent="."]
script = ExtResource("11_6ds4a")

[node name="RunningSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_5foum")
volume_db = -15.0
bus = &"SFX"

[node name="RepairSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_5ua86")
volume_db = -15.0
bus = &"Train"

[node name="Buff" parent="." instance=ExtResource("14_q74rt")]
visible = false

[connection signal="area_entered" from="CarDetector" to="." method="_on_car_detector_area_entered"]
[connection signal="area_exited" from="CarDetector" to="." method="_on_car_detector_area_exited"]
